add spinner xml files but still not working

--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Blueberry</string>
+    <string name="title_activity_re_check">reCheck</string>
+    <string name="action_settings">Settings</string>
 </resources>
