--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Blueberry</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="take_picture">take picture</string>
+    <string name="request_permission">This App needs camera permission.</string>
+    <string name="camera_error">camera error</string>
 </resources>
