--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -2,4 +2,21 @@
     <string name="app_name">Blueberry</string>
     <string name="title_activity_re_check">reCheck</string>
     <string name="action_settings">Settings</string>
+    <string name="recheck_name">이름을 선택하세요</string>
+    <string name="recheck_phone">전화번호를 선택하세요</string>
+    <string name="recheck_company">회사를 선택하세요</string>
+    <string name="recheck_email">이메일을 선택하세요</string>
+    <string name="recheck_next">확인 화면으로 넘어갑니다</string>
+    <string name="recheck_image">image</string>
+    <string name="recheck2_name1">이름</string>
+    <string name="recheck2_name2">앞에서 선택한 이름</string>
+    <string name="recheck2_phone1">전화번호</string>
+    <string name="recheck2_phone2">앞에서 선택한 전화번호</string>
+    <string name="recheck2_mail1">메일</string>
+    <string name="recheck2_mail2">앞에서 선택한 메일</string>
+    <string name="recheck2_company1">회사</string>
+    <string name="recheck2_company2">앞에서 선택한 회사</string>
+    <string name="recheck2_toPhone">전화부에 저장</string>
+    <string name="recheck2_image">image</string>
+
 </resources>
