--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -30,4 +30,22 @@
     <string name="recheckAddress1">이메일1</string>
     <string name="recheckAddress2">이메일2</string>
     <string name="recheckAddress3">이메일3</string>
+
+    <string-array name="recheck_name">
+        <item>이름1</item>
+        <item>이름2</item>
+    </string-array>
+
+    <string-array name="recheck_phone">
+        <item>전화1</item>
+    </string-array>
+
+    <string-array name="recheck_company">
+        <item>회사1</item>
+    </string-array>
+
+    <string-array name="recheck_address">
+        <item>이메일1</item>
+    </string-array>
+
 </resources>
