--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -27,17 +27,22 @@
     <!-- TODO: Remove or change this placeholder text : for U_JIN -->
     <string name="title_activity_re_check">reCheck</string>
     <string name="action_settings">Settings</string>
+    <string name="recheck_title">인적사항 선택</string>
+    <string name="recheck_guiding">정확한 인적사항을 탭하여 선택해주세요\n없다면 다음 장에서 직접 수정이 가능하니 해당 없음을 선택하세요</string>
     <string name="recheck_name">이름을 선택하세요</string>
     <string name="recheck_phone">전화번호를 선택하세요</string>
     <string name="recheck_company">회사를 선택하세요</string>
     <string name="recheck_email">이메일을 선택하세요</string>
     <string name="recheck_next">확인 화면으로 넘어갑니다</string>
     <string name="imageFile">image</string>
+    <string name="recheck2_title">인적사항 수정</string>
+    <string name="recheck2_guiding">올바른 인적사항을 입력해주세요\n주소록 자동 저장 설정을 했을 경우 SAVE 버튼을 통해 주소록으로 넘어갑니다</string>
     <string name="recheck2_name2">이름을 확인하시오</string>
     <string name="recheck2_phone2">전화번호를 확인하시오</string>
     <string name="recheck2_mail2">메일주소를 확인하시오</string>
     <string name="recheck2_company2">회사명을 확인하시오</string>
     <string name="recheck2_toPhone">SAVE</string>
+
 
 
     <string-array name="recheck_name">
