--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -21,8 +21,13 @@
     <string name="title_group">Group</string>
     <string name="title_favorite">Favorite</string>
     <string name="title_option">Option</string>
-    <string name="information">BlueBerry ver0.1\n\nMade by CheeseCake\nshb0328\t소혜빈\nzzarbttoo\t배유진\ncpuman7\t김한수\n"</string>
+
+    <string name="hint_search">검색어를 입력하세요</string>
+    <string name="button_search">Search</string>
+    <string name="button_backup">Backup</string>
+    <string name="button_restore">Restore</string>
     <string name="switch1">주소록 자동 저장</string>
+    <string name="information">BlueBerry ver0.1\n\nMade by CheeseCake\nshb0328\t소혜빈\nzzarbttoo\t배유진\ncpuman7\t김한수\n"</string>
 
     <!-- TODO: Remove or change this placeholder text : for U_JIN -->
     <string name="title_activity_re_check">reCheck</string>
