--- a/Blueberry/app/src/main/res/values/strings.xml
+++ b/Blueberry/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="button_search">Search</string>
     <string name="button_backup">Backup</string>
     <string name="button_restore">Restore</string>
+    <string name="button_signOut">SignOut</string>
     <string name="switch1">주소록 자동 저장</string>
     <string name="information">BlueBerry ver0.1\n\nMade by CheeseCake\nshb0328\t소혜빈\nzzarbttoo\t배유진\ncpuman7\t김한수\n"</string>
 
